retrieve_ENO_DEV1/objects/Outbound_manager_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Async_Limit_Threshold__c</fullName>
        <label>Async Limit Threshold</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Interval_In_Minutes__c</fullName>
        <label>Check Interval In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Request_Retry_Limit__c</fullName>
        <label>Generic Request Retry Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Keep_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lifetime_for_logged_data__c</fullName>
        <label>Lifetime for logged data</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Transfer_Delay_In_Minutes__c</fullName>
        <label>Min Transfer Delay In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Number_Limitation__c</fullName>
        <label>Record Number Limitation</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retry_Limit__c</fullName>
        <label>Retry Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Retry_Limit__c</fullName>
        <label>Update Retry Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Outbound Manager Settings</label>
</CustomObject>